test_suite/tests/compile_error_cases/impl_trait.rs
trait DummyTrait {}

#[moq::automock]
trait Trait {
    fn f(&self, _: impl DummyTrait);
}

fn main() {}
